[workspace]
members = ["steve-cli"]
default-members = ["steve-cli", "."]

[package]
name = "steve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["serde"] }
futures-time = "3.0.0"
futures-util = "0.3.28"
keyring = "2.0.5"
lenient_semver = { version = "0.4.2", features = ["semver"] }
notify = "6.0.1"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
semver = "1.0.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
shellexpand = "3.1.0"
thiserror = "1.0.48"
url = { version = "2.5.7", features = ["serde"] }
walkdir = "2.5.0"
zip = "5.1.1"
