[workspace]
members = ["steve-cli"]
default-members = ["steve-cli", "."]

[package]
name = "steve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.26", features = ["serde"] }
futures-time = "3.0.0"
futures-util = "0.3.31"
keyring = "3.6.3"
lenient_semver = { version = "0.4.2", features = ["semver"] }
notify = "8.2.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
semver = "1.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }
walkdir = "2.5.0"
zip = "5.1.1"
