[package]
name = "steve-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "steve"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
indicatif = "0.18.0"
steve = { path = ".." }
tokio = { version = "1.28.2", features = ["macros"] }
